--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,10 @@ keywords = [
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.7.1"
+python = ">=3.9,<4.0"
 fs-s3fs = { version = "^1.1.1", optional = true }
 requests = "^2.28.2"
-singer-sdk = "^0.30.0"
+singer-sdk = "0.44.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
